(library
  (name camlp_streams)
  (public_name camlp-streams)
  (modules )
  (wrapped false)
  (libraries (select support.ml from
               (camlp-streams.stdlib -> support.4.14.ml)
               (camlp-streams.lib -> support.5.ml)
               ( -> support.empty.ml))))

(rule
  (with-stdout-to support.4.14.ml (echo "")))
(rule
  (with-stdout-to support.5.ml (echo "")))
(rule
  (with-stdout-to support.empty.ml (echo "")))
